use crate::device::Device;
use anyhow::{Result, anyhow};
use core_kit::codec::{dewrap, varint, wrap};
use libmdns::{Responder, Service};
use std::{
    collections::HashMap,
    net::{IpAddr, SocketAddr},
    sync::Arc,
};
use tokio::{
    io::AsyncWriteExt,
    net::{TcpListener, TcpStream},
    sync::{
        Mutex,
        oneshot::{self},
    },
};
use touchpad_proto::proto::v1::{DiscoverValidation, ErrorCode, Reject, Welcome, wrapper::Payload};
use tracing::{debug, error, info, warn};
use utils::{env, sys::get_comptuer_name, token};
use xxhash_rust::xxh3::xxh3_64;

pub struct DiscoverService {
    ttl: u32,
    // mdnsæœåŠ¡çš„ç«¯å£
    discover_port: u16,
    // ç”¨äºå¯åŠ¨mdnsæœåŠ¡çš„IPåˆ—è¡¨
    ip_list: Option<Vec<IpAddr>>,
    // æ ¡éªŒä½¿ç”¨çš„å­—æ®µ
    checksum_seed: String,
    // å‡†å¤‡æ¥å—è¿æ¥çš„è®¾å¤‡
    listening_device: Arc<Mutex<HashMap<IpAddr, Device>>>,
    stop_signal: Arc<Mutex<Option<oneshot::Sender<()>>>>,
    mdns_service: Arc<Mutex<Option<Service>>>,
    discover_callback: Option<Box<dyn Fn(&Device, Vec<&Device>) + Send + Sync>>,
}

/// å…·ä½“çš„å‘ç°æ­¥éª¤
/// 1. æ ¹æ®confirm_portç«¯å£æœåŠ¡ä½œä¸ºåº”ç­”æœåŠ¡
/// 2. å¯åŠ¨mdnsæœåŠ¡ï¼Œåœ¨TXTä¸­ä¼ é€’æ ¡éªŒç 
/// 3. å½“åº”ç­”æœåŠ¡ä¸­æ¥å—åˆ°ç›¸åº”æ ¼å¼çš„æ ¡éªŒç æ—¶ï¼ˆprotobufæ ¼å¼ï¼‰ï¼Œè¿›è¡Œè§£æ
/// 3.1 å¦‚æœæ ¡éªŒæ­£ç¡®ï¼Œåˆ™è¿”å›å…·ä½“è®¾å¤‡ä¿¡æ¯æ ¼å¼(Device)
/// 3.2 å¦‚æœæ ¡éªŒé”™è¯¯ï¼Œè®°å½•é”™è¯¯æ—¥å¿—ï¼Œç»§ç»­ç­‰å¾…è¿æ¥

impl<'d> DiscoverService {
    pub fn new(
        ttl: u32,
        discover_port: u16,
        checksum_seed: String,
        ip_list: Option<Vec<IpAddr>>,
        discover_callback: Option<Box<dyn Fn(&Device, Vec<&Device>) + Send + Sync>>,
    ) -> Self {
        DiscoverService {
            ttl,
            discover_port,
            ip_list,
            checksum_seed,
            listening_device: Arc::new(Mutex::new(HashMap::new())),
            stop_signal: Arc::new(Mutex::new(None)),
            mdns_service: Arc::new(Mutex::new(None)),
            discover_callback,
        }
    }

    /// å¤„ç†å‘ç°éªŒè¯è¯·æ±‚
    async fn discover_validation_handler(
        &self,
        dv: DiscoverValidation,
        socket: &mut TcpStream,
    ) -> Result<Device> {
        info!("æœåŠ¡ç«¯ä½¿ç”¨SEED: '{}'", self.checksum_seed);
        let seed_checksum = xxh3_64(self.checksum_seed.as_bytes());

        info!("æœåŠ¡ç«¯è®¡ç®—çš„æ ¡éªŒæ ¸: {}", seed_checksum);
        info!(
            "æ¥å—åˆ°çš„æ ¡éªŒæ ¸: {}, ç›®æ ‡æ ¡éªŒæ ¸:{}",
            dv.checksum, seed_checksum
        );
        if dv.checksum == seed_checksum {
            let listening_device = self.listening_device.lock().await;
            if let Ok(peer_addr) = socket.peer_addr() {
                if listening_device.contains_key(&peer_addr.ip()) {
                    let reject = Reject {
                        reason: ErrorCode::RepeatedlyAddingDevices as i32,
                    };
                    let _ = socket.write(&wrap(&reject)?);
                    warn!("é‡å¤æ·»åŠ è®¾å¤‡è¢«æ‹’ç»: {}", peer_addr.ip());
                    return Err(anyhow!("Repeatedly adding devices"));
                }

                let token =
                    token::get_first_token(&peer_addr.ip(), &dv.random_key, &dv.device_name)?;
                let device = Device {
                    name: dv.device_name,
                    ip: peer_addr.ip(),
                    width: dv.width,
                    height: dv.height,
                };

                let now = chrono::Utc::now().timestamp();
                let welcome = Welcome {
                    token,
                    ts_ms: now as u64,
                };

                let response_with_prefix = varint::encode_with_length_prefix(&wrap(&welcome)?);
                let _ = socket.write(&response_with_prefix).await;
                Ok(device)
            } else {
                return Err(anyhow!("Failed to get peer address"));
            }
        } else {
            // æ ¡éªŒæ ¸ä¸é€šè¿‡
            let reject = Reject {
                reason: ErrorCode::HelloCheckSumMismatch as i32,
            };
            let response_with_prefix = varint::encode_with_length_prefix(&wrap(&reject)?);
            let _ = socket.write(&response_with_prefix).await;
            info!(
                "ğŸš« å·²å‘å®¢æˆ·ç«¯å‘é€æ‹’ç»æ¶ˆæ¯ï¼Œé•¿åº¦: {} å­—èŠ‚",
                response_with_prefix.len()
            );
            return Err(anyhow!("Failed to handle client connection"));
        }
    }

    async fn handle_client_connection(
        &self,
        mut socket: TcpStream,
        addr: SocketAddr,
    ) -> Result<Device> {
        let message_bytes = match varint::read_message_with_length_prefix(&mut socket).await {
            Ok(bytes) => bytes,
            Err(e) => {
                error!("è¯»å–æ¶ˆæ¯å¤±è´¥ {}: {}", addr, e);
                return Err(e);
            }
        };

        if let Ok(payload) = dewrap(&message_bytes) {
            // TODO: è§£ææ ¡éªŒç å¹¶è¿”å›è®¾å¤‡ä¿¡æ¯
            match payload {
                Payload::DiscoverValidation(dv) => {
                    // æ ¡éªŒéªŒè¯æ ¸
                    let device = self.discover_validation_handler(dv, &mut socket).await?;
                    info!("éªŒè¯è®¾å¤‡æˆåŠŸ: {}", device.name);
                    return Ok(device);
                }
                _ => {
                    warn!("æ”¶åˆ°æœªçŸ¥æ¶ˆæ¯ç±»å‹");
                    return Err(anyhow!("Received unknown payload"));
                }
            }
        } else {
            error!("è§£ææ¶ˆæ¯æ•°æ®å¤±è´¥");
            return Err(anyhow!("Failed to handle client connection"));
        }
    }

    /// å¼€å¯åº”ç­”æœåŠ¡å™¨
    pub async fn start_confirm_server(self: Arc<Self>) -> Result<()> {
        // å…è®¸æ·»åŠ å¤šä¸ªè®¾å¤‡ï¼Œè°ƒç”¨stopå‡½æ•°æ‰‹åŠ¨åœæ­¢
        let (tx, mut rx) = oneshot::channel::<()>();
        let listener = TcpListener::bind(format!("0.0.0.0:{}", self.discover_port)).await?;
        self.stop_signal.lock().await.replace(tx);
        info!("å‘ç°æœåŠ¡å¯åŠ¨ï¼Œç«¯å£: {}", self.discover_port);
        loop {
            tokio::select! {
                res = listener.accept() => {
                    let (socket, addr) = res?;
                    let service = self.clone();
                    tokio::spawn(async move {
                        if let  Ok(dev) = service.handle_client_connection(socket, addr).await {
                            debug!("æ¥å—è¿æ¥: {}", addr);
                            let mut devices = service.listening_device.lock().await;
                            devices.insert(addr.ip(), dev);
                            if let Some(callback) = &service.discover_callback {
                                callback(
                                    devices.get(&addr.ip()).unwrap(),
                                    devices
                                        .values()
                                        .collect::<Vec<&Device>>(),
                                );
                            }
                        }
                    });
                },
                _ = &mut rx => {
                    self.stop_signal.lock().await.take();
                    info!("å‘ç°æœåŠ¡åœæ­¢");
                    break;
                }
            }
        }
        Ok(())
    }

    pub async fn stop(&self) -> Result<()> {
        if let Some(stop_signal) = self.stop_signal.lock().await.take() {
            let _ = stop_signal.send(());
        }
        let _ = self.mdns_service.lock().await.take();
        info!("å‘ç°æœåŠ¡å·²åœæ­¢");
        Ok(())
    }

    pub async fn discover(self: Arc<Self>) -> Result<()> {
        if let Some(_) = self.mdns_service.lock().await.take() {
            return Err(anyhow!("The discover service is started!"));
        }
        let responder = if let Some(ip_list) = &self.ip_list {
            debug!("å¹¿æ’­IPåˆ—è¡¨: {:?}", ip_list);
            Responder::new_with_ip_list(ip_list.clone())?
        } else {
            Responder::new()
        };
        let svc_type = env::get_env("MDNS_SD_META_SERVICE")
            .ok_or_else(|| anyhow!("è·å–æœåŠ¡åç§°ç¯å¢ƒå˜é‡å¤±è´¥"))?;
        info!("MDNSæœåŠ¡åç§°ï¼š{svc_type:?}");
        let server = responder.register_with_ttl(
            svc_type.into(),
            &get_comptuer_name(),
            self.discover_port,
            &[&format!("discover_port={}", self.discover_port)],
            self.ttl,
        );
        self.mdns_service.lock().await.replace(server);
        let service_clone = self.clone();
        tokio::spawn(async move {
            if let Err(e) = service_clone.start_confirm_server().await {
                error!("å¯åŠ¨ç¡®è®¤æœåŠ¡å™¨å¤±è´¥: {:?}", e);
            }
        });
        Ok(())
    }
}
